# climate-risk-hackathon

./: annual_maxima_calculation.ipynb  copula.ipynb  copula1.ipynb  pyproject.toml
.ipynb_checkpoints/: copula-checkpoint.ipynb  copula1-checkpoint.ipynb
data/: ithaca_gridmet_annual_max.csv
