[project]
name = "climate-risk-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.24.1",
    "dask>=2025.5.0",
    "jupyterlab>=4.4.2",
    "numpy>=2.2.6",
    "salem>=0.3.11",
    "scipy>=1.15.3",
    "xarray>=2025.4.0",
]
